--- a/securemem.cabal
+++ b/securemem.cabal
@@ -20,7 +20,7 @@ Library
   Exposed-modules:   Data.SecureMem
   Build-depends:     base >= 4 && < 5
                    , bytestring
-                   , byteable
+                   , byteable >= 0.1.1
                    , ghc-prim
   C-sources:         cbits/utils.c
   ghc-options:       -Wall -fwarn-tabs
