--- a/securemem.cabal
+++ b/securemem.cabal
@@ -27,4 +27,4 @@ Library
 
 source-repository head
   type: git
-  location: git://github.com/vincenthz/hs-securemem
+  location: https://github.com/vincenthz/hs-securemem
