--- a/securemem.cabal
+++ b/securemem.cabal
@@ -21,7 +21,7 @@ Library
   Build-depends:     base >= 4 && < 5
                    , bytestring
                    , byteable >= 0.1.1
-                   , memory
+                   , memory >= 0.7
                    , ghc-prim
   C-sources:         cbits/utils.c
   ghc-options:       -Wall -fwarn-tabs
