--- a/securemem.cabal
+++ b/securemem.cabal
@@ -12,7 +12,7 @@ Maintainer:          vincent@snarc.org
 Category:            Data
 Stability:           experimental
 Build-Type:          Simple
-Homepage:            http://github.com/vincenthz/hs-securemem
+Homepage:            https://github.com/vincenthz/hs-securemem
 Cabal-Version:       >=1.8
 extra-doc-files:     README.md
 
